--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
 # ggsegAicha <img src='man/figures/logo.png' align="right" height="138.5" />
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/ggseg/ggsegAicha/workflows/R-CMD-check/badge.svg)](https://github.com/ggseg/ggsegAicha/actions)
 <!-- badges: end -->
 
 This package contains dataset for plotting the [aicha](https://pubmed.ncbi.nlm.nih.gov/26213217/) atlas ggseg and ggseg3d. 
